﻿v1.5.2

Castbars
* Fixed: Error 1304 - Passive castbar creation.
* Fixed: Error 70 - Player castbar pin scaling.
* Fixed: Error 621 - For either missing Name or missing object creation.
* Fixed: Error 1236 - Cast data access error.

Res Master
* Fixed: Issues with Raid/Group members being only partially available when first encountered, and being locked out from updating.

LibSUnit
* Change: Prevented Units visible via damage [Idle] from being listed in Target List.
* Fixed: Partially available units were never registering themselves in the Name Lookup list, and never doing so from that point forward.

Tank-Swap
* Change: Tanks are now listed in order of Group/Raid position.

Menu
* Fixed: Error 906 - Menu items without settings tables.

Encounters
* Fixed: Error 4134 - Failed boss mod start attempt (forced reset).

Endless Eclipse
* Kain the Reaper
** New: Added Foul Blood debuff duration (Hard Mode usually)

----
v1.5.1

LibSUnit
* New: Added event Event.SafesUnitLib.Unit.Detail.Position (X or Y or Z position has changed) table{[UnitID] = UnitObj}
* New: Added a clean method for retrieving Unit objects. UnitObj = LibSUnit:RequestDetails(UnitID)
* Note: Using this method will create the Unit if available, or return an existing unit object.
* New: Now checks for .relation member during the standard damage/heal handler. If changed, this will trigger Event.SafesUnitLib.Unit.Detail.Relation(table{Key = UID, Value = UnitObject})
* Note: The Rift Addon API still doesn't support native Event.Unit.Detail.Relation, so until it does, the above will remain in the standard damage/heal handler.
* Fixed: Prevented UnitObj.Health sometimes being nil.
* Fixed: Table entry errors for new units created via Unit.Target.
* Fixed: Some odd behaviour with cross-shard raid messages.
* Fixed: Forced removal of targets which have become idle/removed. (Disposable pet fix for Add-Watch)
* Removed: Redundant raid queue code. Slight performance increase.

LibSBuff