@@ -9,7 +9,7 @@ Author = "Paul Snart"
 Website = "http://twitter.com/#!/psnart"
 Email = "snarty@gmail.com"
 
-Version = "0.0.9"
+Version = "0.1.0"
 
 Environment = "1.10", "1.11", "2.0"
 
